--- a/index.html
+++ b/index.html
@@ -22,10 +22,11 @@
 
     </article>
 
-    <article class="card">
+    <article class="card pink">
 
+    <i class="fas fa-coffee"></i>
     <time>September 6th</time>
-    <h2>Is the Hario V60 the best way to make coffee?</h2>
+    <h2 class="pink-heading">Is the Hario V60 the best way to make coffee?</h2>
     <p>Using a pour-over brewing method gives you more flavour flexibility</p>
 
     </article>
