--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
     <link href="main.css" rel="stylesheet">
   </head>
   <body>
- <h1>a cup of href</h1>
- <p id="subhead">(code && coffee)</p>
+ <h1>code <br/>
+   <span style="font-weight:400">&&</span></br> <span style="background-color:#fff; color: #E04866; line-height:1.6; border-radius:2px; padding:0 4px 0 4px;">coffee</span></h1>
+ <!-- <p id="subhead">(code && coffee)</p> -->
  <section class="main">
 
     <article class="card white">
