--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="main.css" rel="stylesheet">
   </head>
   <body>
- <h1>code <br/>
+ <h1 alt="coffee and code">code <br/>
    <span style="font-weight:400">&&</span></br> <span style="background-color:#fff; color: #E04866; line-height:1.6; border-radius:2px; padding:0 4px 0 4px;">coffee</span></h1>
  <!-- <p id="subhead">(code && coffee)</p> -->
  <section class="main">
@@ -32,18 +32,20 @@
 
     </article>
 
-    <article class="card">
+    <article class="card white">
 
+    <i class="fas fa-code"></i>
     <time>September 6th</time>
-    <h2>What happens when you click a link?</h2>
+    <h2 class="white-heading">What happens when you click a link?</h2>
     <p>How hyperlinks are the literal and philosophical backbone of the web</p>
 
     </article>
 
-    <article class="card">
+    <article class="card white">
 
+    <i class="fas fa-code"></i>
     <time>September 2nd</time>
-    <h2>Why is Atom the superior IDE?</h2>
+    <h2 class="white-heading">Why is Atom the superior IDE?</h2>
     <p>We take a closer look at the oft-used browser-based developer tool</p>
 
     </article>
