Mobile nav + spacing

--- a/index.html
+++ b/index.html
@@ -3,16 +3,23 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width = device-width" />
-    <title>A Href: Coffee and Code</title>
+    <title>Code & coffee blog</title>
     <link href="https://fonts.googleapis.com/css?family=Quicksand:400,500,700" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
     <link href="main.css" rel="stylesheet">
   </head>
   <body>
- <h1 alt="coffee and code">code <br/>
-   <span style="font-weight:400">&&</span></br> <span style="background-color:#fff; color: #E04866; line-height:1.6; border-radius:2px; padding:0 4px 0 4px;">coffee</span></h1>
- <!-- <p id="subhead">(code && coffee)</p> -->
- <section class="main">
+  <header>
+    <h1>code <br/>
+      <span style="font-weight:400">&&</span></br> <span style="background-color:#fff; color: #E04866; line-height:1.6; border-radius:2px; padding:0 4px 0 4px;">coffee</span></h1>
+    <!-- <p id="subhead">(code && coffee)</p> -->
+
+       <nav>
+         <a href="#"><i class="fas fa-bars"></i></a>
+       </nav>
+  </header>
+
+ <main>
 
     <article class="card white">
 
@@ -50,7 +57,16 @@
 
     </article>
 
- </section>
+    <article class="card pink">
+
+    <i class="fas fa-coffee"></i>
+    <time>September 6th</time>
+    <h2 class="pink-heading">Is the Hario V60 the best way to make coffee?</h2>
+    <p>Using a pour-over brewing method gives you more flavour flexibility</p>
+
+    </article>
+
+ </main>
 
   </body>
 </html>
