Desktop responsive fix

--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
     <link href="main.css" rel="stylesheet">
   </head>
   <body>
+  <div class="begrudging-wrapper">
+
   <header>
+    <!-- <h1>coffee<br/>
+      <span style="background-color:#fff; color: #E04866; line-height:1.6; border-radius:2px; padding:0 4px 0 4px; font-weight:400">&&</span></br> code</h1> -->
     <h1>code <br/>
       <span style="font-weight:400">&&</span></br> <span style="background-color:#fff; color: #E04866; line-height:1.6; border-radius:2px; padding:0 4px 0 4px;">coffee</span></h1>
     <!-- <p id="subhead">(code && coffee)</p> -->
@@ -21,6 +25,7 @@
 
  <main>
 
+    <!-- <h2 class="temp">Latest articles</h2> -->
     <article class="card white">
 
     <i class="fas fa-code"></i>
@@ -30,11 +35,11 @@
 
     </article>
 
-    <article class="card pink">
+    <article class="card white">
 
     <i class="fas fa-coffee"></i>
     <time>September 6th</time>
-    <h2 class="pink-heading">Is the Hario V60 the best way to make coffee?</h2>
+    <h2 class="white-heading">Is the Hario V60 the best way to make coffee?</h2>
     <p>Using a pour-over brewing method gives you more flavour flexibility</p>
 
     </article>
@@ -57,16 +62,17 @@
 
     </article>
 
-    <article class="card pink">
+    <article class="card white">
 
     <i class="fas fa-coffee"></i>
     <time>September 6th</time>
-    <h2 class="pink-heading">Is the Hario V60 the best way to make coffee?</h2>
+    <h2 class="white-heading">Is the Hario V60 the best way to make coffee?</h2>
     <p>Using a pour-over brewing method gives you more flavour flexibility</p>
 
     </article>
 
  </main>
 
+</div>
   </body>
 </html>
