Animation on h1, small layout fixes

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
   <header>
     <!-- <h1>coffee<br/>
       <span style="background-color:#fff; color: #E04866; line-height:1.6; border-radius:2px; padding:0 4px 0 4px; font-weight:400">&&</span></br> code</h1> -->
-    <h1>code <br/>
-      <span style="font-weight:400">&&</span></br> <span style="background-color:#fff; color: #E04866; line-height:1.6; border-radius:2px; padding:0 4px 0 4px;">coffee</span></h1>
+    <h1>coffee <br/>
+      <span style="font-weight:400">&&</span></br> <span style="background-color:#fff; color: #E04866; line-height:1.6; border-radius:2px; padding:0 4px 0 4px;">c<span>o</span><span>d</span><span>e</span><span id="cursor-anim">|</span></span></h1>
     <!-- <p id="subhead">(code && coffee)</p> -->
 
        <nav>
